--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASSWORD=1234
+DB_HOST=mysql-942b61a-softcrowdtest038-fc65.g.aivencloud.com
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_E83ZZUhNN44ZN2lwEiv
 DB_NAME=akshay_patra
-DB_PORT=3306
+DB_PORT=28992
 JWT_SECRET=Gg7#P1k$h8^z%6d&Qx@Z8!w*R4t#Y7e&F3c$B1n^V5h!K2m*J9u%T3
